--- a/MiljoBrott/MiljoBrott.csproj
+++ b/MiljoBrott/MiljoBrott.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\inv_images\" />
+    <Folder Include="wwwroot\samples\" />
+  </ItemGroup>
+
 </Project>
