Commit almost working

--- a/MiljoBrott/MiljoBrott.csproj
+++ b/MiljoBrott/MiljoBrott.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\..\Uppgift 1 - Layout %2528VC%2529\MiljoBrott\MiljoBrott\ÖDeprecated\ShowFile\ShowImage.cshtml" Link="ÖDeprecated\ShowImage.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
