About to create ReportCrime component instead of layout

--- a/MiljoBrott/appsettings.json
+++ b/MiljoBrott/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EnvironmentalCrimeDatabase;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EnvironmentalCrimeDatabase;Trusted_Connection=true;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=EnvironmentalCrimeIdentityDatabase;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
