--- a/MiljoBrott/MiljoBrott.csproj
+++ b/MiljoBrott/MiljoBrott.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
@@ -14,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="..\..\..\Uppgift 1 - Layout %2528VC%2529\MiljoBrott\MiljoBrott\Models\ViewModels\" />
     <Folder Include="wwwroot\inv_images\" />
     <Folder Include="wwwroot\samples\" />
   </ItemGroup>
